# bot_stankozavod

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
src/app/: config.py  keyboard.py  router.py
