[tool.poetry]
name = "bot-stankozavod"
version = "0.1.0"
description = ""
authors = ["Aleksandr Mazurenko <amazurenko@rvision.ru>"]
readme = "README.md"
packages = [{include = "bot_stankozavod"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
