[tool.poetry]
name = "bot-stankozavod"
version = "0.1.0"
description = ""
authors = ["Aleksandr Mazurenko <amazurenko@rvision.ru>"]
readme = "README.md"
packages = [{include = "bot_stankozavod"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {version = "^3.0.0rc2", allow-prereleases = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
